--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,11 @@
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true
+  },
+  "compilerOptions": {
+    "baseUrl": "./src",
+    "paths" : {
+      "@asx/*": ["app/*"]
+    }
   }
 }
